--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="mx-10 my-5 lg:mx-20 lg:my-10 font-serif">
-    <nav class="grid lg:grid-cols-3 space-y-10 items-center ">
+    <nav class="grid lg:grid-cols-3 space-y-10 items-center text-center ">
         <div class="flex space-x-3">
             <i class="fa-solid fa-arrow-right -rotate-45 bg-green-500 rounded-full p-2 text-xl"></i>
             <h3 class="text-2xl">Rinterio</h3>
@@ -50,7 +50,7 @@
         </div>
 
 
-        <section class="bg-gray-200 p-10">
+        <section class="bg-gray-200 p-10 mt-16">
             <img class="hidden lg:block" src="assets/Vector.png" alt="">
             <div class="grid grid-cols-1 lg:grid-cols-2 pt-10 pl-20 ">
                <div>
@@ -88,9 +88,57 @@
 
                </div>
                <div>
-                 <img class="h-100 pl-28" src="assets/Rectangle.png" alt="">
+                 <img class="lg:h-100 pl-28" src="assets/Rectangle.png" alt="">
                </div>
             </div>
+        </section>
+
+
+        <section class="bg-gray-100 mt-20 pt-10 px-12 pb-10">
+         <div class="text-center items-center">
+            <button class="bg-white p-2 rounded-lg">
+                <i class="fa-solid fa-arrow-right"></i>
+                <span class="text-sm">How we works</span>
+            </button>
+
+            <h2 class="text-2xl">Our Works Process</h2>
+            <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+         </div>
+
+
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 space-x-5">
+            <div class="bg-red-200  p-5 rounded-lg">
+                <img src="assets/concept.png" alt="">
+                <br>
+                <h4 class="text-2xl">Concept</h4>
+                <br>
+                <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="bg-red-200  p-5 rounded-lg">
+                <img src="assets/flow-chart.png" alt="">
+                <br>
+                <h4 class="text-2xl">Design Process</h4>
+                <br>
+                <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="bg-red-200  p-5 rounded-lg">
+                <img src="assets/vision.png" alt="">
+                <br>
+                <h4 class="text-2xl">Supervision</h4>
+                <br>
+                <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="bg-red-200 p-5 rounded-lg">
+                <img src="assets/budget-planning.png" alt="">
+                <br>
+                <h4 class="text-2xl">Budget Planing</h4>
+                <br>
+                <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+         </div>
         </section>
     </main>
 </body>
